[Sudhin] - Fix alignment of graph when page is zoomed out

--- a/src/stylesheets/_quadrants.scss
+++ b/src/stylesheets/_quadrants.scss
@@ -41,7 +41,7 @@
       display: none;
       transition: none;
 
-      margin: 0;
+      margin: 0 auto;
 
       &.enable-transition {
         transition: all 1s ease;
